fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -7,13 +7,15 @@
 }
 html{
   scroll-behavior: smooth;
+  overflow-x: clip;
 }
 
 body {
   background-color: #ede8d0;
   font-family: Playfair;
   width: 100%;
-  overflow-x: hidden;
+  margin: 0;
+  overflow-x: clip;
 }
 
 #science {
@@ -23,10 +25,10 @@ body {
 }
 
 .title {
-  width: 100%;
+  width: 90%;
   text-align: center;
   /* border: 1px black solid; */
-  font-size: 48px;
+  font-size: 46px;
 }
 
 .nav {
@@ -39,7 +41,7 @@ body {
 
 .topSettings {
   /* border: 1px solid black; */
-  width: 100%;
+  width: 90%;
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
@@ -105,6 +107,8 @@ body {
 }
 
 .container {
+  width: 100%;
+  max-width: 320px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 0.5rem;
